--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -294,6 +294,7 @@ jobs:
           fi
           FUNCTION_URL_FULL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/search?code=${FUNCTION_KEY}"
           GET_POSTS_FUNCTION_URL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/getposts?code=${FUNCTION_KEY}"
+          REPORT_FUNCTION_URL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/GenerateReport?code=${FUNCTION_KEY}"
           echo "FUNCTION_URL_FULL=$FUNCTION_URL_FULL" >> $GITHUB_OUTPUT
           echo "GET_POSTS_FUNCTION_URL=$GET_POSTS_FUNCTION_URL" >> $GITHUB_OUTPUT
           echo "DEBUG: FUNCTION_URL_FULL = $FUNCTION_URL_FULL"
@@ -306,6 +307,7 @@ jobs:
             SAS_FULL="${{ steps.gen_sas.outputs.CONTAINER_ENDPOINT_SAS }}"
             FUNCTION_URL_FULL="${{ steps.set_function_url.outputs.FUNCTION_URL_FULL }}"
             GET_POSTS_FUNCTION_URL="${{ steps.set_function_url.outputs.GET_POSTS_FUNCTION_URL }}"
+            REPORT_FUNCTION_URL="${{ steps.set_function_url.outputs.REPORT_FUNCTION_URL }}"
             echo "DEBUG: SAS_FULL para deploy do Web App: $SAS_FULL"
             echo "DEBUG: FUNCTION_URL_FULL: $FUNCTION_URL_FULL"
             echo "DEBUG: GET_POSTS_FUNCTION_URL: $GET_POSTS_FUNCTION_URL"
@@ -321,6 +323,7 @@ jobs:
                 CONTAINER_ENDPOINT_SAS="$SAS_FULL" \
                 FUNCTION_URL="$FUNCTION_URL_FULL" \
                 GET_POSTS_FUNCTION_URL="$GET_POSTS_FUNCTION_URL"
+                REPORT_FUNCTION_URL="$REPORT_FUNCTION_URL"
 
             echo "Iniciando deploy Web App ($WEBAPP_NAME) via Bicep..."
             az deployment group create \
