--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -207,7 +207,7 @@ jobs:
                 secretValue="${CLIENT_SECRET}" \
                 translatorEndpoint="" \
                 translatorKey="" \
-              --only-show-errors
+              
             echo "Function App deployment via Bicep concluído."
 
       - name: Debug - listar conteúdo redditIngestFunc antes do zip
@@ -308,24 +308,14 @@ jobs:
             FUNCTION_URL_FULL="${{ steps.set_function_url.outputs.FUNCTION_URL_FULL }}"
             GET_POSTS_FUNCTION_URL="${{ steps.set_function_url.outputs.GET_POSTS_FUNCTION_URL }}"
             REPORT_FUNCTION_URL="${{ steps.set_function_url.outputs.REPORT_FUNCTION_URL }}"
-            echo "DEBUG: SAS_FULL para deploy do Web App: $SAS_FULL"
-            echo "DEBUG: FUNCTION_URL_FULL: $FUNCTION_URL_FULL"
-            echo "DEBUG: GET_POSTS_FUNCTION_URL: $GET_POSTS_FUNCTION_URL"
-            if [ -z "$FUNCTION_URL_FULL" ] || [ -z "$GET_POSTS_FUNCTION_URL" ]; then
-              echo "ERRO: As URLs das functions estão vazias. Verifique a etapa anterior."
-              exit 1
-            fi
-            # Define App Settings no Web App:
             az webapp config appsettings set \
               --resource-group "$RG" \
               --name "$WEBAPP_NAME" \
               --settings \
                 CONTAINER_ENDPOINT_SAS="$SAS_FULL" \
                 FUNCTION_URL="$FUNCTION_URL_FULL" \
-                GET_POSTS_FUNCTION_URL="$GET_POSTS_FUNCTION_URL"
+                GET_POSTS_FUNCTION_URL="$GET_POSTS_FUNCTION_URL" \
                 REPORT_FUNCTION_URL="$REPORT_FUNCTION_URL"
-
-            echo "Iniciando deploy Web App ($WEBAPP_NAME) via Bicep..."
             az deployment group create \
               --name "deploy-webapp-$(date +%s)" \
               --resource-group "$RG" \
@@ -342,9 +332,8 @@ jobs:
                 containerSasToken="${{ steps.gen_sas.outputs.SAS_TOKEN }}" \
                 functionUrl="$FUNCTION_URL_FULL" \
                 functionGetPostsUrl="$GET_POSTS_FUNCTION_URL" \
-                functionGenerateReport="$REPORT_FUNCTION_URL"
+                functionGenerateReport="$REPORT_FUNCTION_URL" \
                 containerEndpointSas="$SAS_FULL" \
-            echo "Web App deployment concluído."
 
       - name: Reiniciar Web App e Function App após deploy
         uses: azure/cli@v1
