--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -206,8 +206,7 @@ jobs:
                 clientIdValue="${CLIENT_ID}" \
                 secretValue="${CLIENT_SECRET}" \
                 translatorEndpoint="" \
-                translatorKey="" \
-              
+                translatorKey="" 
             echo "Function App deployment via Bicep concluído."
 
       - name: Debug - listar conteúdo redditIngestFunc antes do zip
@@ -229,6 +228,14 @@ jobs:
           echo "Listando conteúdo do zip:"
           unzip -l ../funcapp.zip
 
+      - name: Validar requirements.txt localmente
+        run: |
+          cd "${AZURE_FUNCTIONAPP_PACKAGE_PATH}"
+          if [ -f requirements.txt ]; then
+            pip install --upgrade pip
+            pip install -r requirements.txt
+          fi
+
       - name: Deploy Function App via Zip Deploy
         uses: azure/cli@v1
         with:
@@ -240,31 +247,24 @@ jobs:
               --settings \
                 FUNCTIONS_WORKER_RUNTIME=python \
                 FUNCTIONS_EXTENSION_VERSION="~4" \
-                # Se desejar, defina variáveis de ambiente específicas aqui:
-                # COSMOS_ENDPOINT="<seu-endpoint-cosmos>" \
-                # COSMOS_KEY="<sua-chave-cosmos>" \
-                # COSMOS_DATABASE="RedditApp" \
-                # COSMOS_CONTAINER="posts" \
-                # REDDIT_USER="${REDDIT_USER}" \
-                # REDDIT_PASSWORD="${REDDIT_PASSWORD}" \
-                # CLIENT_ID="${CLIENT_ID}" \
-                # SECRET="${CLIENT_SECRET}" \
+                AzureWebJobsStorage="${{ steps.get_storage_conn.outputs.STORAGE_CONNECTION_STRING }}" \
+                COSMOS_ENDPOINT="$(az cosmosdb show --name $COSMOS_ACCOUNT_NAME --resource-group $RG --query documentEndpoint -o tsv)" \
+                COSMOS_KEY="$(az cosmosdb keys list --name $COSMOS_ACCOUNT_NAME --resource-group $RG --query primaryMasterKey -o tsv)" \
+                COSMOS_DATABASE="RedditApp" \
+                COSMOS_CONTAINER="posts" \
+                REDDIT_USER="${REDDIT_USER}" \
+                REDDIT_PASSWORD="${REDDIT_PASSWORD}" \
+                CLIENT_ID="${CLIENT_ID}" \
+                SECRET="${CLIENT_SECRET}" \
                 WEBSITE_RUN_FROM_PACKAGE=1 \
+                CONTAINER_ENDPOINT_SAS="${{ steps.gen_sas.outputs.CONTAINER_ENDPOINT_SAS }}" \
                 SCM_DO_BUILD_DURING_DEPLOYMENT=true
-
             az functionapp deployment source config-zip \
               --resource-group "$RG" \
               --name "$FUNCTIONAPP_NAME" \
               --src "$GITHUB_WORKSPACE/funcapp.zip" \
               --only-show-errors
-
-            echo "Aguardando indexação das funções..."
-            sleep 20
-            echo "Funções publicadas na Function App (via Azure CLI):"
-            az functionapp function list \
-              --resource-group "$RG" \
-              --name "$FUNCTIONAPP_NAME" \
-              -o table
+            az functionapp restart --resource-group "$RG" --name "$FUNCTIONAPP_NAME" --only-show-errors
 
       - name: Aguardar indexação e obter master key da Function App
         id: get_function_key
@@ -287,20 +287,15 @@ jobs:
       - name: Construir FUNCTION URLs
         id: set_function_url
         run: |
-          echo "Montando URLs das funções..."
           FUNCTION_KEY="${{ steps.get_function_key.outputs.FUNCTION_KEY }}"
-          if [ -z "$FUNCTION_KEY" ]; then
-            echo "WARNING: FUNCTION_KEY está vazio!"
-          fi
           FUNCTION_URL_FULL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/search?code=${FUNCTION_KEY}"
           GET_POSTS_FUNCTION_URL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/getposts?code=${FUNCTION_KEY}"
           REPORT_FUNCTION_URL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/GenerateReport?code=${FUNCTION_KEY}"
           echo "FUNCTION_URL_FULL=$FUNCTION_URL_FULL" >> $GITHUB_OUTPUT
           echo "GET_POSTS_FUNCTION_URL=$GET_POSTS_FUNCTION_URL" >> $GITHUB_OUTPUT
-          echo "DEBUG: FUNCTION_URL_FULL = $FUNCTION_URL_FULL"
-          echo "DEBUG: GET_POSTS_FUNCTION_URL = $GET_POSTS_FUNCTION_URL"
+          echo "REPORT_FUNCTION_URL=$REPORT_FUNCTION_URL" >> $GITHUB_OUTPUT
 
-      - name: Deploy Web App com Function URL e CONTAINER_ENDPOINT_SAS via CLI + Bicep
+      - name: Configurar App Settings do Web App
         uses: azure/cli@v1
         with:
           inlineScript: |
@@ -308,6 +303,12 @@ jobs:
             FUNCTION_URL_FULL="${{ steps.set_function_url.outputs.FUNCTION_URL_FULL }}"
             GET_POSTS_FUNCTION_URL="${{ steps.set_function_url.outputs.GET_POSTS_FUNCTION_URL }}"
             REPORT_FUNCTION_URL="${{ steps.set_function_url.outputs.REPORT_FUNCTION_URL }}"
+
+            echo ">> SAS_FULL: $SAS_FULL"
+            echo ">> FUNCTION_URL_FULL: $FUNCTION_URL_FULL"
+            echo ">> GET_POSTS_FUNCTION_URL: $GET_POSTS_FUNCTION_URL"
+            echo ">> REPORT_FUNCTION_URL: $REPORT_FUNCTION_URL"
+
             az webapp config appsettings set \
               --resource-group "$RG" \
               --name "$WEBAPP_NAME" \
@@ -316,6 +317,11 @@ jobs:
                 FUNCTION_URL="$FUNCTION_URL_FULL" \
                 GET_POSTS_FUNCTION_URL="$GET_POSTS_FUNCTION_URL" \
                 REPORT_FUNCTION_URL="$REPORT_FUNCTION_URL"
+
+      - name: Deploy Web App via Bicep
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
             az deployment group create \
               --name "deploy-webapp-$(date +%s)" \
               --resource-group "$RG" \
@@ -330,10 +336,11 @@ jobs:
                 storageAccountName="${STORAGE_ACCOUNT_NAME}" \
                 containerName="${CONTAINER_NAME}" \
                 containerSasToken="${{ steps.gen_sas.outputs.SAS_TOKEN }}" \
-                functionUrl="$FUNCTION_URL_FULL" \
-                functionGetPostsUrl="$GET_POSTS_FUNCTION_URL" \
-                functionGenerateReport="$REPORT_FUNCTION_URL" \
-                containerEndpointSas="$SAS_FULL" \
+                functionUrl="${{ steps.set_function_url.outputs.FUNCTION_URL_FULL }}" \
+                functionGetPostsUrl="${{ steps.set_function_url.outputs.GET_POSTS_FUNCTION_URL }}" \
+                functionGenerateReport="${{ steps.set_function_url.outputs.REPORT_FUNCTION_URL }}" \
+                containerEndpointSas="${{ steps.gen_sas.outputs.CONTAINER_ENDPOINT_SAS }}" \
+              --only-show-errors
 
       - name: Reiniciar Web App e Function App após deploy
         uses: azure/cli@v1
