--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -169,19 +169,6 @@ jobs:
             echo "CONTAINER_ENDPOINT_SAS=$fullSasUrl" >> $GITHUB_OUTPUT
             echo "DEBUG: fullSasUrl = $fullSasUrl"
 
-      # -> Passo inserido para obter connection string da Storage Account, necessário para AzureWebJobsStorage
-      - name: Obter connection string da Storage Account
-        id: get_storage_conn
-        uses: azure/cli@v1
-        with:
-          inlineScript: |
-            echo "Obtendo connection string da Storage Account ${STORAGE_ACCOUNT_NAME}..."
-            CONN=$(az storage account show-connection-string \
-              --name "$STORAGE_ACCOUNT_NAME" \
-              --resource-group "$RG" \
-              --query connectionString -o tsv)
-            echo "STORAGE_CONNECTION_STRING=$CONN" >> $GITHUB_OUTPUT
-
       - name: Login Docker Hub
         uses: docker/login-action@v2
         with:
@@ -219,7 +206,8 @@ jobs:
                 clientIdValue="${CLIENT_ID}" \
                 secretValue="${CLIENT_SECRET}" \
                 translatorEndpoint="" \
-                translatorKey="" 
+                translatorKey="" \
+              --only-show-errors
             echo "Function App deployment via Bicep concluído."
 
       - name: Debug - listar conteúdo redditIngestFunc antes do zip
@@ -241,14 +229,6 @@ jobs:
           echo "Listando conteúdo do zip:"
           unzip -l ../funcapp.zip
 
-      - name: Validar requirements.txt localmente
-        run: |
-          cd "${AZURE_FUNCTIONAPP_PACKAGE_PATH}"
-          if [ -f requirements.txt ]; then
-            pip install --upgrade pip
-            pip install -r requirements.txt
-          fi
-
       - name: Deploy Function App via Zip Deploy
         uses: azure/cli@v1
         with:
@@ -260,24 +240,31 @@ jobs:
               --settings \
                 FUNCTIONS_WORKER_RUNTIME=python \
                 FUNCTIONS_EXTENSION_VERSION="~4" \
-                AzureWebJobsStorage="${{ steps.get_storage_conn.outputs.STORAGE_CONNECTION_STRING }}" \
-                COSMOS_ENDPOINT="$(az cosmosdb show --name $COSMOS_ACCOUNT_NAME --resource-group $RG --query documentEndpoint -o tsv)" \
-                COSMOS_KEY="$(az cosmosdb keys list --name $COSMOS_ACCOUNT_NAME --resource-group $RG --query primaryMasterKey -o tsv)" \
-                COSMOS_DATABASE="RedditApp" \
-                COSMOS_CONTAINER="posts" \
-                REDDIT_USER="${REDDIT_USER}" \
-                REDDIT_PASSWORD="${REDDIT_PASSWORD}" \
-                CLIENT_ID="${CLIENT_ID}" \
-                SECRET="${CLIENT_SECRET}" \
+                # Se desejar, defina variáveis de ambiente específicas aqui:
+                # COSMOS_ENDPOINT="<seu-endpoint-cosmos>" \
+                # COSMOS_KEY="<sua-chave-cosmos>" \
+                # COSMOS_DATABASE="RedditApp" \
+                # COSMOS_CONTAINER="posts" \
+                # REDDIT_USER="${REDDIT_USER}" \
+                # REDDIT_PASSWORD="${REDDIT_PASSWORD}" \
+                # CLIENT_ID="${CLIENT_ID}" \
+                # SECRET="${CLIENT_SECRET}" \
                 WEBSITE_RUN_FROM_PACKAGE=1 \
-                CONTAINER_ENDPOINT_SAS="${{ steps.gen_sas.outputs.CONTAINER_ENDPOINT_SAS }}" \
                 SCM_DO_BUILD_DURING_DEPLOYMENT=true
+
             az functionapp deployment source config-zip \
               --resource-group "$RG" \
               --name "$FUNCTIONAPP_NAME" \
               --src "$GITHUB_WORKSPACE/funcapp.zip" \
               --only-show-errors
-            az functionapp restart --resource-group "$RG" --name "$FUNCTIONAPP_NAME" --only-show-errors
+
+            echo "Aguardando indexação das funções..."
+            sleep 20
+            echo "Funções publicadas na Function App (via Azure CLI):"
+            az functionapp function list \
+              --resource-group "$RG" \
+              --name "$FUNCTIONAPP_NAME" \
+              -o table
 
       - name: Aguardar indexação e obter master key da Function App
         id: get_function_key
@@ -300,41 +287,42 @@ jobs:
       - name: Construir FUNCTION URLs
         id: set_function_url
         run: |
+          echo "Montando URLs das funções..."
           FUNCTION_KEY="${{ steps.get_function_key.outputs.FUNCTION_KEY }}"
+          if [ -z "$FUNCTION_KEY" ]; then
+            echo "WARNING: FUNCTION_KEY está vazio!"
+          fi
           FUNCTION_URL_FULL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/search?code=${FUNCTION_KEY}"
           GET_POSTS_FUNCTION_URL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/getposts?code=${FUNCTION_KEY}"
-          REPORT_FUNCTION_URL="https://${FUNCTIONAPP_NAME}.azurewebsites.net/api/GenerateReport?code=${FUNCTION_KEY}"
           echo "FUNCTION_URL_FULL=$FUNCTION_URL_FULL" >> $GITHUB_OUTPUT
           echo "GET_POSTS_FUNCTION_URL=$GET_POSTS_FUNCTION_URL" >> $GITHUB_OUTPUT
-          echo "REPORT_FUNCTION_URL=$REPORT_FUNCTION_URL" >> $GITHUB_OUTPUT
+          echo "DEBUG: FUNCTION_URL_FULL = $FUNCTION_URL_FULL"
+          echo "DEBUG: GET_POSTS_FUNCTION_URL = $GET_POSTS_FUNCTION_URL"
 
-      - name: Configurar App Settings do Web App
+      - name: Deploy Web App com Function URL e CONTAINER_ENDPOINT_SAS via CLI + Bicep
         uses: azure/cli@v1
         with:
           inlineScript: |
             SAS_FULL="${{ steps.gen_sas.outputs.CONTAINER_ENDPOINT_SAS }}"
             FUNCTION_URL_FULL="${{ steps.set_function_url.outputs.FUNCTION_URL_FULL }}"
             GET_POSTS_FUNCTION_URL="${{ steps.set_function_url.outputs.GET_POSTS_FUNCTION_URL }}"
-            REPORT_FUNCTION_URL="${{ steps.set_function_url.outputs.REPORT_FUNCTION_URL }}"
-
-            echo ">> SAS_FULL: $SAS_FULL"
-            echo ">> FUNCTION_URL_FULL: $FUNCTION_URL_FULL"
-            echo ">> GET_POSTS_FUNCTION_URL: $GET_POSTS_FUNCTION_URL"
-            echo ">> REPORT_FUNCTION_URL: $REPORT_FUNCTION_URL"
-
+            echo "DEBUG: SAS_FULL para deploy do Web App: $SAS_FULL"
+            echo "DEBUG: FUNCTION_URL_FULL: $FUNCTION_URL_FULL"
+            echo "DEBUG: GET_POSTS_FUNCTION_URL: $GET_POSTS_FUNCTION_URL"
+            if [ -z "$FUNCTION_URL_FULL" ] || [ -z "$GET_POSTS_FUNCTION_URL" ]; then
+              echo "ERRO: As URLs das functions estão vazias. Verifique a etapa anterior."
+              exit 1
+            fi
+            # Define App Settings no Web App:
             az webapp config appsettings set \
               --resource-group "$RG" \
               --name "$WEBAPP_NAME" \
               --settings \
                 CONTAINER_ENDPOINT_SAS="$SAS_FULL" \
                 FUNCTION_URL="$FUNCTION_URL_FULL" \
-                GET_POSTS_FUNCTION_URL="$GET_POSTS_FUNCTION_URL" \
-                REPORT_FUNCTION_URL="$REPORT_FUNCTION_URL"
+                GET_POSTS_FUNCTION_URL="$GET_POSTS_FUNCTION_URL"
 
-      - name: Deploy Web App via Bicep
-        uses: azure/cli@v1
-        with:
-          inlineScript: |
+            echo "Iniciando deploy Web App ($WEBAPP_NAME) via Bicep..."
             az deployment group create \
               --name "deploy-webapp-$(date +%s)" \
               --resource-group "$RG" \
@@ -349,11 +337,11 @@ jobs:
                 storageAccountName="${STORAGE_ACCOUNT_NAME}" \
                 containerName="${CONTAINER_NAME}" \
                 containerSasToken="${{ steps.gen_sas.outputs.SAS_TOKEN }}" \
-                functionUrl="${{ steps.set_function_url.outputs.FUNCTION_URL_FULL }}" \
-                functionGetPostsUrl="${{ steps.set_function_url.outputs.GET_POSTS_FUNCTION_URL }}" \
-                functionGenerateReport="${{ steps.set_function_url.outputs.REPORT_FUNCTION_URL }}" \
-                containerEndpointSas="${{ steps.gen_sas.outputs.CONTAINER_ENDPOINT_SAS }}" \
+                functionUrl="$FUNCTION_URL_FULL" \
+                functionGetPostsUrl="$GET_POSTS_FUNCTION_URL" \
+                containerEndpointSas="$SAS_FULL" \
               --only-show-errors
+            echo "Web App deployment concluído."
 
       - name: Reiniciar Web App e Function App após deploy
         uses: azure/cli@v1
